--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -14,13 +14,22 @@
     align-items: flex-start;
     max-width: 50%;
     padding-left: 20px;
+    
   }
   
   .description span {
-    display: block;
-    font-size: 1.6rem;
-
+    display: inline-block;
+    font-size: 1rem; /* Ajustado para coincidir mejor con la imagen */
+    color: #fff;
+    font-weight: bold;
+    margin: 5px 0;
+    background-color: #333;
+    padding: 5px 10px; /* Ajustado para coincidir mejor con la imagen */
+    border-radius: 5px; /* Ajustado para coincidir mejor con la imagen */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   }
+x  
+  
   
   .description h1 {
    
@@ -50,9 +59,14 @@
   }
 
   .titleProjects h1 {
-font-size: 3rem;
-color: #333;
+    font-size: 5rem; /* Ajusta el tamaño de fuente según sea necesario */
+    color: #000;
+    font-weight: bold;
+    text-shadow: 2px 2px #bbb;
+    margin: 20px 0; /* Ajusta el margen según sea necesario */
+    text-align: center;
   }
+  
   
   
 
