--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,87 +1,85 @@
 /* Hero.module.css */
 
 .heroContainer {
-    padding: 30px;
-    text-align: left;
-    
+  padding: 30px;
+  text-align: left;
+}
 
-   
-  }
-  
+.description {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  max-width: 50%;
+  padding-left: 20px;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.heroName {
+  font-size: 2rem;
+  color: #fff;
+  font-weight: bold;
+  margin: 5px 0;
+  background-color: #333;
+  padding: 8px 20px;
+  border-radius: 30px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  display: inline-block;
+}
+
+.heroTitle {
+  font-size: 3.5rem;
+  color: #000;
+  margin: 5px 0;
+  font-weight: bold;
+  text-shadow: 2px 2px #bbb;
+  word-wrap: break-word;
+}
+
+.heroDescription {
+  font-size: 1.1rem;
+  color: #666;
+  line-height: 1.5;
+  text-align: justify;
+}
+
+.skills {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+  padding: 5px;
+  align-items: center;
+}
+
+.projectsTop {
+  margin-top: 20px;
+}
+
+.titleProjects {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.titleProjects h1 {
+  font-size: 5rem;
+  color: #000;
+  font-weight: bold;
+  text-shadow: 2px 2px #bbb;
+  margin: 20px 0;
+  text-align: center;
+}
+
+.heroFlexbox {
+  display: flex;
+  height: auto;
+  background-color: #f0f4f8;
+  align-items: center;
+}
+
+@media (min-width: 883px) and (max-width: 1192px) {
   .description {
-    display: flex;
-    flex-direction:column;
-    align-items: flex-start;
-    max-width: 50%;
-    padding-left: 20px;
-    
-  }
-  
-  .description span {
-    display: inline-block;
-    font-size: 1rem; /* Ajustado para coincidir mejor con la imagen */
-    color: #fff;
-    font-weight: bold;
-    margin: 5px 0;
-    background-color: #333;
-    padding: 5px 10px; /* Ajustado para coincidir mejor con la imagen */
-    border-radius: 5px; /* Ajustado para coincidir mejor con la imagen */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-  }
-x  
-  
-  
-  .description h1 {
-   
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-  }
-  
-  .skills {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 30px;
-    padding: 5px;
-    align-items: center;
-   
-  }
-  
-  .projectsTop {
-    margin-top: 20px;
-  }
-  
-  .titleProjects {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-
-  .titleProjects h1 {
-    font-size: 5rem; /* Ajusta el tamaño de fuente según sea necesario */
-    color: #000;
-    font-weight: bold;
-    text-shadow: 2px 2px #bbb;
-    margin: 20px 0; /* Ajusta el margen según sea necesario */
-    text-align: center;
-  }
-  
-  
-  
-
-  .heroFlexbox{
-    display: flex;
-    height: auto;
-    background-color: #f0f4f8;
-    align-items: center;
-
-   
-  }
-
- 
-@media (min-width:883px) and (max-width:1192px){
-  .description{
     display: block;
   }
 }
@@ -92,9 +90,21 @@ x
     align-items: center;
   }
 
-  .description, .skills {
+  .description,
+  .skills {
     max-width: 100%;
     padding-left: 0;
     text-align: center;
   }
+
+  .description h1 {
+    font-size: 2rem !important;
+    justify-content: center !important;
+  }
+
+  .description span {
+    font-size: 1.5rem !important;
+    padding: 5px 10px !important;
+  }
 }
+/**/
