--- a/client/src/components/About/About.module.css
+++ b/client/src/components/About/About.module.css
@@ -1,13 +1,15 @@
+/* About.module.css */
+
 .aboutContainer {
   padding: 100px;
+  font-family: 'Poppins', sans-serif;
 }
 
 .aboutTitle {
   font-size: 3.5rem;
   color: #000;
-  margin: 5px 0;
-  font-weight: bold;
-  text-shadow: 2px 2px #bbb;
+  margin: 10px 0;
+  font-weight: 300;
   text-align: center;
 }
 
@@ -38,27 +40,76 @@
 
 .codeTitle {
   font-size: 2rem;
-  color: #333;
-  margin-bottom: 10px;
+  font-weight: 600;
+  margin: 10px 0;
+  background: linear-gradient(90deg, #4497fb, #034595);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.codeSubtitle {
+  font-size: 3.5rem;
+  font-weight: 300;
+  margin: 10px 0;
+  color: #000;
 }
 
 .codeDescription {
   font-size: 1rem;
-  color: #666;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #555;
 }
 
-@media (max-width:429px){
+.ctaButtons {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.ctaButton {
+  padding: 10px 20px;
+  font-size: 1rem;
+  font-weight: 600;
+  color: #fff;
+  background-color: #4497fb;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.ctaButton:hover {
+  background-color: #034595;
+}
+
+@media (max-width: 429px) {
   .aboutContainer {
     padding: 20px;
   }
-}
 
-@media (min-width:430px) and (max-width:767px){
-  .aboutContainer {
-    padding: 60px;
+  .aboutTitle {
+    font-size: 2.5rem;
+  }
+
+  .codeSection {
+    grid-template-columns: 1fr;
   }
 }
 
+@media (min-width: 430px) and (max-width: 767px) {
+  .aboutContainer {
+    padding: 60px;
+  }
+
+  .aboutTitle {
+    font-size: 3rem;
+  }
+
+  .codeSection {
+    grid-template-columns: 1fr;
+  }
+}
 
 @media (max-width: 768px) {
   .aboutTitle {
@@ -71,5 +122,15 @@
 
   .textContainer, .codeContainerWrapper {
     max-width: 100%;
+  }
+
+  .ctaButtons {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .ctaButton {
+    width: 100%;
+    text-align: center;
   }
 }
