--- a/client/src/components/About/About.module.css
+++ b/client/src/components/About/About.module.css
@@ -1,5 +1,3 @@
-/* About.module.css */
-
 .aboutContainer {
   padding: 100px;
   font-family: 'Poppins', sans-serif;
@@ -23,7 +21,7 @@
 .textContainer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   padding: 20px;
   background-color: #fff;
   border-radius: 10px;
@@ -48,7 +46,7 @@
 }
 
 .codeSubtitle {
-  font-size: 3.5rem;
+  font-size: 3.9rem;
   font-weight: 300;
   margin: 10px 0;
   color: #000;
@@ -95,6 +93,13 @@
   .codeSection {
     grid-template-columns: 1fr;
   }
+
+  .codeSubtitle {
+    font-size: 3.5rem;
+    font-weight: 300;
+    margin: 10px 0;
+    color: #000;
+  }
 }
 
 @media (min-width: 430px) and (max-width: 767px) {
@@ -127,10 +132,28 @@
   .ctaButtons {
     flex-direction: column;
     align-items: center;
+    display: none;
   }
 
   .ctaButton {
     width: 100%;
     text-align: center;
   }
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.reactIcon {
+  display: inline-block;
+  animation: spin 5s linear infinite;
+  margin-left: 10px;
+  color: #61DAFB; /* Color oficial de React */
+  position: relative; /* Asegura que la posición se mantenga */
 }
