--- a/client/src/components/Hero/Hero.module.css
+++ b/client/src/components/Hero/Hero.module.css
@@ -74,11 +74,33 @@
   align-items: center;
 }
 
-@media (min-width: 883px) and (max-width: 1192px) {
-  .description {
-    display: block;
+.mouseIconContainer {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  margin-left: 5px;
+}
+
+.mouseIcon {
+  font-size: 20px;
+  color: #000;
+  animation: ripple 1.5s infinite;
+}
+
+@keyframes ripple {
+  0% {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2);
+  }
+  70% {
+    box-shadow: 0 0 0 20px rgba(0, 0, 0, 0);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
   }
 }
+
+/* Responsivo */
 
 @media (max-width: 882px) {
   .heroContainer {
@@ -112,7 +134,7 @@
   }
 
   .titleProjects h1 {
-    font-size: 2.5rem;
+    font-size: 3.5rem;
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
   }
