[*]Listo Para Produccion 31 Mayo 2024

--- a/client/src/components/ProjectCard/ProjectCard.module.css
+++ b/client/src/components/ProjectCard/ProjectCard.module.css
@@ -1,36 +1,49 @@
-/* ProjectCard.module.css */
-
 .containerProjectCard {
-    padding: 20px;
-  }
-  
-  .projectCard {
-    width: 325px;
-    height: 180px;
-    border: 1px solid black;
-    border-radius: 30px;
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    align-items: flex-end;
-    color: white;
-    padding: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    position: relative;
-    overflow: hidden; /* Asegúrate de que el contenido no se desborde */
-    
-  }
-  
-  .projectCardContent {
-    background: rgba(0, 0, 0, 0.5);
-    padding: 10px;
-    border-radius: 10px;
-    width: 100%;
-    text-align: center;
-  }
-  
-  .projectCard h4,
-  .projectCard p {
-    margin: 0;
-  }
-  
+  padding: 20px;
+}
+
+.projectCard {
+  width: 325px;
+  height: 180px;
+  border: 1px solid black;
+  border-radius: 30px;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: flex-end;
+  color: white;
+  padding: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  position: relative;
+  overflow: hidden; /* Asegúrate de que el contenido no se desborde */
+}
+
+.projectCardContent {
+  background: rgba(0, 0, 0, 0.822);
+  padding: 10px;
+  border-radius: 10px;
+  width: 100%;
+  text-align: center;
+}
+
+.projectCard h4,
+.projectCard p {
+  margin: 0;
+}
+
+.iconsContainer {
+  margin-top: 10px;
+  display: flex;
+  gap: 10px;
+  justify-content: center; /* Centrar los iconos */
+}
+
+.icon {
+  color: white; /* Cambia esto al color que prefieras */
+  text-decoration: none;
+  transition: transform 0.2s;
+}
+
+.icon:hover {
+  transform: scale(1.1);
+}
