--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -1,5 +1,3 @@
-/* Header.module.css */
-
 .headerContainer {
   font-family: "Montserrat Alternates", sans-serif;
   font-weight: 400;
@@ -15,107 +13,128 @@
   z-index: 1000; /* Aseguramos que el header esté por encima del contenido */
 }
 
-  .hamburgerMenu {
-    position: relative;
-    z-index: 1000; /* Para asegurarse de que el menú siempre esté en la parte superior */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-  }
-  
-  .icon {
-    cursor: pointer;
-    color: white;
-    font-size: 1.5rem;
-  }
-  
-  .menu {
-    display: none; /* Ocultamos el menú por defecto */
-  }
-  
-  .menuOpen {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.9);
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    z-index: 999; /* Para asegurarse de que el menú siempre esté en la parte superior */
-  }
-  
-  .menuOpen a {
-    color: white;
-    text-decoration: none;
-    font-size: 1.5rem;
-    margin: 1rem 0;
-    transition: color 0.3s ease;
-  }
-  
-  .menuOpen a:hover {
-    color: #ddd;
-  }
-  
-  .desktopMenu {
-    display: flex;
-    gap: 1rem;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .logo {
-    width: 100px;
-  }
-  
-  .logoMobile {
-    display: flex;
-    align-items: center;
-  }
-  
-  .links {
-    display: flex;
-    justify-content: flex-end;
-    gap: 30px;
-    align-items: center;
-    width: 70%;
-    padding-right: 20px;
-  }
-  
-  .desktopMenu a {
-    color: white;
-    text-decoration: none;
-    font-size: 1rem;
-  }
-  
-  .desktopMenu a:hover {
-    color: #ddd;
-  }
-  
-  .socialIcons {
-    display: flex;
-    gap: 1rem;
-  }
-  
-  .socialIcons a {
-    color: white;
-    font-size: 1.5rem;
-  }
-  
-  .socialIcons a:hover {
-    color: #ddd;
-  }
-  
-  .iconOpen {
-    position: fixed;
-    top: 1rem;
-    right: 1rem;
-    z-index: 1001; /* Aseguramos que el icono esté por encima del menú */
-  }
-  
+.hamburgerMenu {
+  position: relative;
+  z-index: 1000; /* Para asegurarse de que el menú siempre esté en la parte superior */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
 
+.icon {
+  cursor: pointer;
+  color: white;
+  font-size: 1.5rem;
+}
+
+.menu {
+  display: none; /* Ocultamos el menú por defecto */
+}
+
+.menuOpen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.9);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 999; /* Para asegurarse de que el menú siempre esté en la parte superior */
+}
+
+.menuOpen a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.5rem;
+  margin: 1rem 0;
+  transition: color 0.3s ease;
+  cursor: pointer;
+}
+
+.menuOpen a:hover {
+  color: #ddd;
+}
+
+.desktopMenu {
+  display: flex;
+  gap: 1rem;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  width: 100px;
+}
+
+.logoMobile {
+  display: flex;
+  align-items: center;
+}
+
+.links {
+  display: flex;
+  justify-content: flex-end;
+  gap: 30px;
+  align-items: center;
+  width: 70%;
+  padding-right: 20px;
+}
+
+.desktopMenu a {
+  color: white;
+  text-decoration: none;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.desktopMenu a:hover {
+  color: #ddd;
+}
+
+.socialIcons {
+  display: flex;
+  gap: 1rem;
+}
+
+.socialIcons a {
+  color: white;
+  font-size: 1.5rem;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.socialIcons a:hover {
+  color: #ddd;
+}
+
+.iconOpen {
+  position: fixed;
+  top: 1rem;
+  right: 1rem;
+  z-index: 1001; /* Aseguramos que el icono esté por encima del menú */
+}
+
+.link {
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.link:hover {
+  color: #ddd;
+}
+
+.iconLink {
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.iconLink:hover {
+  color: #ddd;
+}
