--- a/client/src/components/Footer/Footer.module.css
+++ b/client/src/components/Footer/Footer.module.css
@@ -11,6 +11,7 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 20px;
+   
   }
   
   .column {
@@ -103,3 +104,32 @@
     }
   }
   
+
+  @media(min-width:1367px){
+   
+    .footer{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    
+
+  .topSection {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 20px;
+   
+    max-width: 70%;
+  }
+
+  .copyright{
+    margin-top: 40px;
+  }
+  }
+
+
+  .downloadLink{
+    display: flex;
+    gap: 10px;
+  }
